# PreparationThesis.SoftwareQuality.Code

./: CECloud.bat  CMakeLists.txt  README.md
MSVC2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CECloud.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
MSVC2015/src/applications/item/: cmake_install.cmake  item.vcxproj  item.vcxproj.filters
MSVC2015/src/applications/main/: CECloud.vcxproj  CECloud.vcxproj.filters  cmake_install.cmake
MSVC2015/src/applications/model/: cmake_install.cmake  model.vcxproj  model.vcxproj.filters
MSVC2015/src/applications/presenter/: cmake_install.cmake  presenter.vcxproj  presenter.vcxproj.filters
MSVC2015/src/applications/qtView/: cmake_install.cmake  qtView.vcxproj  qtView.vcxproj.filters  qtView_automoc.cpp
MSVC2015/src/applications/utilities/: cmake_install.cmake  utilities.vcxproj  utilities.vcxproj.filters
cmake/Boost/: Link.cmake
cmake/GMock/: Link.cmake
cmake/QCustomPlot/: Link.cmake
cmake/Qt/: Link.cmake  QtFileTypes.cmake
cmake/general/: FileUtilities.cmake  LanguageFileTypes.cmake  LibUtilities.cmake
lib/QCustomPlot/MSVC2015/Debug/: QCustomPlot.lib
lib/QCustomPlot/MSVC2015/Release/: QCustomPlot.lib
lib/gmock/MSVC2015/Release/: gmock.lib  gmock_main.lib
src/applications/item/: CMakeLists.txt
src/applications/main/: CMakeLists.txt  main.cpp
src/applications/model/: CMakeLists.txt
src/applications/presenter/: CMakeLists.txt
src/applications/qtView/: CMakeLists.txt
src/applications/utilities/: CMakeLists.txt
src/applications/utilities/testSuite/: CMakeLists.txt  main.cpp
src/item/: CMakePackage.cmake  item_Export.h
src/item/HierarchicItem/: HierarchicItem.cpp  HierarchicItem.h
src/item/HierarchicItem/TableItem/: PropertiesItem.cpp  PropertiesItem.h  TableItem.cpp  TableItem.h  TableRoot.cpp  TableRoot.h
src/item/HierarchicItem/TreeItem/: AllTreeItemIncludes.h  TreeItem.cpp  TreeItem.h
src/item/TreeItemFactory/: TreeItemFactory.h  TreeItemFactoryImp.cpp  TreeItemFactoryImp.h
src/model/: CMakePackage.cmake  modelException.h  model_Export.h
src/model/Binder/CoordinateSystemBinder/: CoordinateSystemBinder.cpp  CoordinateSystemBinder.h  CoordinateSystemBinderTest.cpp  CoordinateSystemBinderTest.h
src/model/Binder/MorisonBinder/: MorisonBinder.cpp  MorisonBinder.h  MorisonBinderTest.cpp  MorisonBinderTest.h
src/model/Binder/PileBinder/: PileBinder.cpp  PileBinder.h  PileBinderTest.cpp  PileBinderTest.h
src/model/Binder/SedimentBinder/: SedimentBinder.cpp  SedimentBinder.h  SedimentBinderTest.cpp  SedimentBinderTest.h
src/model/Binder/SedimentTransportBinder/: SedimentTransportBinder.cpp  SedimentTransportBinder.h  SedimentTransportBinderTest.cpp  SedimentTransportBinderTest.h
src/model/Binder/WaterBinder/: WaterBinder.cpp  WaterBinder.h  WaterBinderTest.cpp  WaterBinderTest.h
src/model/Binder/WaveBinder/: WaveBinder.cpp  WaveBinder.h  WaveBinderTest.cpp  WaveBinderTest.h
src/model/Binder/WaveDynamicBinder/: WaveDynamicBinder.cpp  WaveDynamicBinder.h  WaveDynamicBinderTest.cpp  WaveDynamicBinderTest.h
src/model/Commands/: AddNodeCommand.cpp  AddNodeCommand.h  EditCommand.cpp  EditCommand.h  VisitorCommand.cpp  VisitorCommand.h
src/model/Editor/: Editor.cpp  Editor.h
src/model/Editor/CoordinateSystemEditor/: CoordinateSystemEditor.cpp  CoordinateSystemEditor.h
src/model/Editor/MorisonEditor/: MorisonEditor.cpp  MorisonEditor.h
src/model/Editor/PileEditor/: PileEditor.cpp  PileEditor.h
src/model/Editor/SedimentEditor/: SedimentEditor.cpp  SedimentEditor.h
src/model/Editor/SedimentTransportEditor/: SedimentTransportEditor.cpp  SedimentTransportEditor.h
src/model/Editor/WaterEditor/: WaterEditor.cpp  WaterEditor.h
src/model/HierarchyNode/: AllNodeIncludes.h  AllNodeTypeIncludes.h  HierarchyNode.cpp  HierarchyNode.h  HierarchyNodeMocks.h  HierarchyNodeProperties.cpp  HierarchyNodeProperties.h  HierarchyNodeTest.cpp  HierarchyNodeTest.h  Units.cpp  Units.h
src/model/HierarchyNodeFactory/: HierarchyNodeFactory.h  HierarchyNodeFactoryImp.cpp  HierarchyNodeFactoryImp.h
src/presenter/: CMakePackage.cmake  presenter_Export.h
src/presenter/RootBuilder/: AllRootBuilderIncludes.h  RootBuilder.cpp  RootBuilder.h
src/presenter/RootBuilderFactory/: RootBuilderFactory.h  RootBuilderFactoryImp.cpp  RootBuilderFactoryImp.h
src/presenter/Shell/: Shell.h
src/qtView/: CMakePackage.cmake  qtView_Export.h
src/qtView/MyQCustomTable/: MyQCustomTable.cpp  MyQCustomTable.h
src/qtView/MyQDockWidget/: MyQDockWidget.cpp  MyQDockWidget.h
src/qtView/MyQItemModel/: MyQItemModel.cpp  MyQItemModel.h
src/qtView/MyQMenu/: MyQMenu.cpp  MyQMenu.h
src/qtView/MyQShell/: MyQShell.cpp  MyQShell.h
src/qtView/MyQTableView/: MyQItemTableModel.cpp  MyQItemTableModel.h  MyQTableView.cpp  MyQTableView.h
src/qtView/MyQTreeView/: MyQItemTreeModel.cpp  MyQItemTreeModel.h  MyQTreeView.cpp  MyQTreeView.h
src/qtView/MyQUtilities/: CMakePackage.cmake  MyQUtilities.h
src/qtView/MyQViewFactoryImp/: MyQViewFactoryImp.cpp  MyQViewFactoryImp.h
src/utilities/: CMakePackage.cmake  utilities_Export.h
src/utilities/CommandQueue/: AddCommandService.h  Command.cpp  Command.h  CommandMocks.h  CommandQueue.h  CommandQueueImp.cpp  CommandQueueImp.h  CommandQueueImpTest.cpp  CommandQueueImpTest.h
src/utilities/Composite/: Composite.cpp  Composite.h
src/utilities/Event/: Event.h  EventArgs.h  EventArgsMocks.h  EventListener.h  EventListenerMocks.h  EventMocks.h  EventTest.cpp  EventTest.h
src/utilities/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  Logger.h  LoggerMocks.h
src/utilities/Math/: Math.cpp  Math.h  MathTest.cpp  MathTest.h
src/utilities/Object/: LoggingObject.cpp  LoggingObject.h  Object.cpp  Object.h  ObjectMocks.h  ObjectTest.cpp  ObjectTest.h
src/utilities/Observer/: Observer.h  ObserverMocks.h  Subject.cpp  Subject.h  SubjectTest.cpp  SubjectTest.h
src/utilities/String/: String.cpp  String.h  StringTest.cpp  StringTest.h  stringException.h
src/utilities/Visitor/: Visitable.cpp  Visitable.h  VisitableMocks.h  Visitor.h  VisitorMocks.h
(+341 files in other folders)
